<resources>
    <string name="app_name">Online Shopping</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="ImagePathUrl">http:192.168.10.5:8080/porjectapi/ItemsImages/</string>
    <string name="GetItems">http://sassysports.net/emartproject/TestProject2/public/api/items</string>
    <!--<string name="GetItems">http:192.168.10.5:8080/porjectapi/getItems.php</string>-->
    <string name="LoginApi">http://sassysports.net/emartproject/TestProject2/public/api/login</string>
    <!--<string name="LoginApi">http:192.168.10.5:8080/porjectapi/applogin.php?</string>-->
    <string name="AppSignUpApi">http:192.168.10.5:8080/porjectapi/appsignup.php?</string>
    <string name="CheckUserRequestForNeedItem">http:192.168.10.5:8080/porjectapi/CheckRequest.php?</string>
    <string name="GetNeedItems">http:192.168.10.5:8080/porjectapi/getNeedItem.php?</string>
    <string name="VoteProduct">http:192.168.10.5:8080/porjectapi/VoteProduct.php?</string>
    <string name="AddNeededItem">http:192.168.10.5:8080/porjectapi/AddNeededItem.php?</string>
    <string name="PlaceOrder">http:192.168.10.5:8080/porjectapi/PlaceOrder.php?</string>
    <string name="UpdateToken">http:192.168.10.5:8080/porjectapi/UpdateToken.php?</string>
    <string name="SubmitFeedBack">http:192.168.10.5:8080/porjectapi/SubmitFeedBack.php?</string>
    <string name="GetProductFeedBack">http:192.168.10.5:8080/porjectapi/GetProductFeedBack.php?</string>
    <string name="GetOrderProducts">http:192.168.10.5:8080/porjectapi/GetCompletedOrder.php?</string>
    <string name="GetOrders">http:192.168.10.5:8080/porjectapi/GetOrders.php?</string>

    <string name="title_activity_maps">Map</string>
    <string name="view_all_needed_item">View All Needed Item</string>
    <string name="add_needed_item">Add Needed Item</string>
    <string name="name">Name:</string>
    <string name="price">Price</string>
    <string name="Vote">Vote</string>
    <string name="description">Description</string>
    <string name="select_image">Select Image</string>
    <string name="image">Image</string>
    <string name="add_product">Add Product</string>
    <string name="product_name">Product name</string>
    <string name="vote">Vote</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="name_text">Name :</string>
    <string name="price_text">Price :</string>
    <string name="quantity_text">Quantity :</string>
    <string name="order_status">Order Status :</string>
    <string name="feedback_of_product">Feedback of Product</string>
    <string name="submit">Submit</string>
    <string name="address">Address:</string>
    <string name="total_bill">Total Bill:</string>
    <string name="sub_total">Sub Total</string>
</resources>
