<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical"
    tools:context="com.example.Saad.MyFYPProject.AddNeededItemActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="17sp"
            tools:ignore="UnusedAttribute"
            android:hint="@string/product_name"
            android:inputType="text" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">



        <EditText

            android:id="@+id/product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:hint="@string/price"
            android:textSize="17sp"
            android:inputType="numberDecimal"
            tools:ignore="UnusedAttribute"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/product_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:hint="@string/description"
            android:textSize="17sp"
            android:inputType="textMultiLine"
            tools:ignore="UnusedAttribute" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/SelectImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="15dp"
            android:background="#B71C1C"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/select_image"
            android:textColor="@color/white"
            android:textColorHint="#000"
            android:textSize="15sp"
            android:textStyle="bold"
            android:visibility="gone"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/AddNeededItemButton"

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"

            android:layout_marginLeft="40dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="11dp"
            android:background="#B71C1C"

            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/add_product"
            android:textColor="@color/white"
            android:textColorHint="#000"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="40dp"
            tools:ignore="ButtonStyle" />


    </LinearLayout>

    <ImageView
        android:id="@+id/productImageView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        tools:ignore="UnusedAttribute"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/image" />


</LinearLayout>
